# NextStep

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: smoke-fake-baselines.yml
artifacts/patches/: webshop_local.patch
configs/env/: webshop_hacking_probe_manifest_v0.1.0.json  webshop_task_manifest_dev20.json  webshop_task_manifest_v0.1.0.json  webshop_v0.1.0.json
configs/orchestrator/: orchestrator_rl_v0.1.0.json  worker_pool_v0.1.0.json
configs/rm/: anchors_v0.1.0.json  hacking_probe_prompts_v0.1.0.md  rm_training_v0.1.0.json
docs/: failure_cases.md  hacking_probe_spec.md  notes.md  research_spec.md
docs/patches/: patch_20260210.md  patch_20260211.md
scripts/: eval_all.sh  generate_task_splits.py  run_baselines.sh  run_real_dev_slice.sh  smoke_baselines_fake.sh  summarize_metrics.py  train_orchestrator.sh  train_rm.sh
src/: __init__.py
src/env/: __init__.py  base.py  webshop.py
src/eval/: __init__.py  baselines.py
src/orchestrator/: __init__.py
src/rm/: __init__.py
src/utils/: __init__.py  config.py  logging.py  trajectory.py
