[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nextstep"
version = "0.1.0"
description = "Learning to Orchestrate Multi-Agent Workflows with Reward Models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "NextStep Team"}
]
keywords = ["multi-agent", "orchestration", "reward-modeling", "LLM", "reinforcement-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "pydantic>=2.0.0",
    "tyro>=0.5.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
webshop = [
    "web-shop @ git+https://github.com/prasetyo-s/webshop.git",
    "selenium>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/nextstep"
Repository = "https://github.com/yourusername/nextstep"

[project.scripts]
nextstep-run-baseline = "src.eval.baselines:main"
nextstep-train-rm = "src.rm.training:main"
nextstep-train-orchestrator = "src.orchestrator.grpo_trainer:main"
nextstep-eval = "src.eval.full_evaluation:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
